--- a/source/sass/blocks/mobile_menu.scss
+++ b/source/sass/blocks/mobile_menu.scss
@@ -113,7 +113,7 @@
 
 .menu__item:hover,.nav__showmenu:hover,.menu__showsub:hover
 {opacity: 0.9;
-color: #D62323;
+color: #000;
 }
 .menu::-webkit-scrollbar {display: none;}
 .nav__check:checked+.nav__showmenu {color:#fff;}
