--- a/source/sass/blocks/main__content.scss
+++ b/source/sass/blocks/main__content.scss
@@ -18,6 +18,19 @@
   background-color: #046380;
   margin-left: 180px;
   margin-bottom: 70px;
+  cursor: pointer;
+}
+
+.main__button:hover
+{
+  background-color: #002f2f;
+  cursor: pointer;
+}
+
+.main__button:active
+{
+  background-color: #000;
+  cursor: pointer;
 }
 
 .main__button a
